Enhance framework to run tests on selenoid

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,3 +1,4 @@
-browserType = chrome
+browserType = chrome-remote
 baseUrl = https://rahulshettyacademy.com/AutomationPractice/
+hubUrl = http://localhost:4444/wd/hub
 webDriverExplicitWaitInSeconds = 10
