Add Methods and Tests

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,5 @@
-browserType = chrome-remote
-baseUrl = https://rahulshettyacademy.com/AutomationPractice/
+browserType = chrome
+baseUrl = https://demoqa.com/
 hubUrl = http://localhost:4444/wd/hub
 webDriverExplicitWaitInSeconds = 10
+webDriverExtendedExplicitWaitInSeconds = 30
