--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,4 @@
-browserType = chrome
+browserType = chrome-remote
 baseUrl = https://demoqa.com/
 hubUrl = http://localhost:4444/wd/hub
 webDriverExplicitWaitInSeconds = 10
